# tfcbm

./: .agnostic_de.md.kate-swp  .gitignore  ARCHITECTURE.md  AUTOSTART_FIX_EXPLANATION.md  DBUS_INTEGRATION_SUMMARY.md  EXTENSION_APP_INTEGRATION.md  FEATURES.md  FLATHUB_LINTER_ISSUES_EXPLAINED.md  FLATHUB_PREPARATION_PLAN.md  FLATHUB_REQUIREMENTS.md  FLATPAK_PERMISSIONS_JUSTIFICATION.md  FLATPAK_SUBMISSION_GUIDE.md  GNOME_EXTENSION_INTEGRATION.md  GNOME_VERSION_EXPLAINED.md  LICENSE  PHASE2_PLAN.md  PHASE_3.md  PRODUCTION_READY.md  QUICK_START.md  README.md  README_PACKAGING.md  RELEASE_CHECKLIST.md  SCREENSHOT_FEATURE.md  TODO_BEFORE_SUBMISSION.md  TODO_BEFORE_SUBMISSION.txt  UBUNTU_DEBUG.md  agnostic_de.md  architecture_and_dependencies.md  aur-deploy.sh  aur-test.sh  backend.py  bugs.txt  build-appimage.sh  build-extension-zip.py  build-extension-zip.sh  chatgpt_prompt.md  check-extension.sh  check_status.sh  cleanup-tfcbm.sh  cleanup.md  (+83 more)
.github/: README.md
.github/workflows/: LOCAL_TESTING.md  flatpak-ci.yml  release.yml  snap-ci.yml
agent/: refactor-agent.md
docs/: CODING_STANDARDS.md  LOGGING_STRATEGY.md  PROGRESS.md  README.md  SIDEPANEL_ARCHITECTURE.md  SIDEPANEL_FEATURE_PARITY.md  SIDEPANEL_PLAN.md  UI-Architecture.md  architecture.md  gnome_extension_architecture.md  side-panel-mode-design.md
gnome-extension/: .eslintrc.json  .gitignore  PREPARATION_SUMMARY.md  README.md  SUBMISSION_CHECKLIST.md  TFCBM_INTEGRATION_GUIDE.md  extension.js  install.sh  metadata.json  package-lock.json  package.json  stylesheet.css  test-extension.js  uninstall.sh
gnome-extension/schemas/: gschemas.compiled  org.gnome.shell.extensions.simple-clipboard.gschema.xml  org.gnome.shell.extensions.tfcbm-clipboard-monitor.gschema.xml
gnome-extension/src/: ClipboardMonitorService.js  PollingScheduler.js  SidePanelManager.js
gnome-extension/test/: PollingScheduler.test.js  README.md
helper/: helper-dependencies.txt
polkit/: tfcbm-polkit-helper
resouces/: loader.html
server/: README.md  README_TESTS.md  TEST_RESULTS_SUMMARY.md  cleanup_orphaned_records.py  pytest.ini
server/src/: database.py  dbus_service.py  settings.py  settings.yml
snap/: snapcraft.yaml
test_app/: .gitignore  FINAL_SUMMARY.md  QUICKSTART.md  README.md  REFACTORING.md  REFACTORING_SUMMARY.md  SOLUTION_EXPLAINED.md  TESTING.md  TEST_COMMANDS.md  activate_app.sh  global_hotkey.py  hotkey_daemon.py  install_extension.sh  install_shortcut.py  main.py  popup-app-activator.desktop  popup_app.py  pyproject.toml  pytest.ini  requirements.txt  run.sh  run_tests.sh  test_find_path.py
test_app/gnome-extension/: extension.js  metadata.json
test_app/gnome-extension/schemas/: gschemas.compiled  org.gnome.shell.extensions.popup-app-hotkey.gschema.xml  org.gnome.shell.extensions.shortcut-recorder-poc.gschema.xml
test_app/src/: __init__.py  config.py  main.py
test_app/src/application/: activation_tracker.py  shortcut_service.py
test_app/src/domain/: keyboard.py
test_app/src/infrastructure/: __init__.py  gsettings_store.py  gtk_keyboard_parser.py
test_app/src/interfaces/: __init__.py  keyboard_input.py  settings.py
test_app/src/ui/: __init__.py  application.py  window.py
test_app/tests/: __init__.py  helpers.py  test_activation_tracking.py  test_keyboard_domain.py  test_settings_store.py  test_shortcut_recording.py
test_app/tests/fakes/: __init__.py  fake_keyboard_parser.py  fake_settings_store.py
tests/: __init__.py  conftest.py
ui/: README.md  about.py  main.py  splash.py  style.css  test_autostart_behavior.py  test_extension_behavior.py
ui/animations/: __init__.py  slide_animator.py
ui/application/: __init__.py  clipboard_app.py  css_loader.py
ui/builders/: main_window_builder.py
ui/components/: __init__.py  search_bar.py
ui/config/: __init__.py  paths.py  settings.py
ui/core/: __init__.py  di_container.py  protocols.py
ui/dialogs/: __init__.py  password_dialog.py  secret_naming_dialog.py
ui/domain/: __init__.py  keyboard.py
ui/infrastructure/: gsettings_store.py  gtk_keyboard_parser.py  json_settings_store.py
ui/interfaces/: __init__.py  keyboard_input.py  settings.py
ui/managers/: __init__.py  clipboard_list_manager.py  filter_bar_manager.py  filter_manager.py  history_loader_manager.py  keyboard_shortcut_handler.py  notification_manager.py  pagination_manager.py  search_manager.py  sort_manager.py  tab_manager.py  tag_dialog_manager.py  tag_display_manager.py  tag_filter_manager.py  tag_manager.py  user_tags_manager.py  window_manager.py  window_position_manager.py
ui/pages/: __init__.py  settings_page.py
ui/rows/: __init__.py  clipboard_item_row.py
ui/services/: __init__.py  clipboard_monitor.py  clipboard_service.py  database_service.py  ipc_client.py  ipc_helpers.py  password_service.py  shortcut_listener.py  shortcut_service.py  tag_service.py  websocket_client.py
ui/utils/: __init__.py  color_utils.py  extension_check.py  formatting.py  highlighting.py  icons.py  system_info.py
ui/windows/: __init__.py  clipboard_window.py  (+2 more)
(+86 files in other folders)
